1998-08-19  Raph Levien  <raph@gimp.org>

	* gdk/gdkrgb.c: fixed some bugs in the 565_d mode, and added a
	4bpp static_color mode (for vga displays). Also fixed a '64' value
	in the dither matrix, which was causing one pixel out of 16k to be
	dithered wrong.

	* gtk/gtkpreview.{c,h}: Changed it to work with GdkRgb, gutting
	most of the contents. This is an API change - any apps that relied
	on the internal structure of GtkPreview will need some change -
	most notably in the use of reserved colors. The Gimp needed
	changes in this regard.

Wed Aug 19 00:11:14 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_init): allow argument parsing in gtk without
	G_ENABLE_DEBUG being defined (specifically --gtk-module= and
	--g-fatal-warnings), noticed by miguel.

Tue Aug 18 17:54:40 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.c (gtk_rc_parse_file): use g_get_current_dir() instead of
	getcwd().

 	* gdk/gdkprivate.h:
	* gdk/gdkglobals.c:
 	* gdk/gdkwindow.c:
	* gdk/gdk.c:
	* gtk/gtkwindow.c: 
	* gtk/gtkitemfactory.c: 
	dropped gdk_progname, use g_get_prgname()/g_set_prgname() instead.

	* gtk/gtkselection.c:
	* gtk/gtkpreview.c:
	* gtk/gtkobject.c: 
	* gtk/gtkmain.c: 
	* gtk/gtktypeutils.c: indentation fixes due to g_message() use.

	* gdk/gdkrgb.c: exchanged occourances of g_print with g_message.

Tue Aug 18 17:22:22 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtknotebook.c (gtk_notebook_switch_focus_tab): 
	* gtk/gtknotebook.c (gtk_notebook_update_labels): fix for sigsegv
	in case of show_tabs == NULL

Tue Aug 18 03:54:43 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c	(gtk_init): restricted the --g*fatal-* arguments
	to --g-fatal-warnings again. this option now causes log levels of
	WARNING and CRITICAL to abort().

	* gdk/gdk.c: 
	* gdk/gdkdnd.c: 
	* gdk/gdkcc.c: 
	* gdk/gdkfont.c: 
	* gdk/gdkwindow.c:
	* gdk/gdkvisual.c:
	* gtk/gtkwidget.c:
	* gtk/gtktypeutils.c:
	* gtk/gtktree.c:
	* gtk/gtkfontsel.c:
	* gtk/gtkmain.c:
	* gtk/gtkobject.c:
	* gtk/gtkpreview.c: