@@ -6602,7 +6602,11 @@ create_color_preview (void)
 
   if (!window)
     {
+      gtk_widget_push_visual (gdk_rgb_get_visual ());
+      gtk_widget_push_colormap (gdk_rgb_get_cmap ());
       window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
+      gtk_widget_pop_colormap ();
+      gtk_widget_pop_visual ();
 
       gtk_signal_connect (GTK_OBJECT (window), "destroy",
 			  GTK_SIGNAL_FUNC(color_preview_destroy),
